Document how to run the testsuite